# plotpen

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: pip.yml  wheels.yml
maintenance/: extract_markers_from_mpl.py
plotpen/: __init__.py  colors.py  export.py  scale.py  tex.py  ticks.py  tikz.py
src/plotpen/: __init__.py  colors.py  export.py  markers.py  scale.py  svg.py  tex.py  ticks.py  tikz.py
tests/: demo.py  line_chart.py  test_plotpen.py
