[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "plotpen"
description = "SVG based plotting tools"
authors = [{ name = "Thijs Vogels" }]
version = "0.0.3"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = ["typing_extensions>4", "flexbox>=0.0.1", "domtree>=0.0.5", "matplotlib"]
optional-dependencies = { test = ["pytest"] }

[project.urls]
homepage = "https://github.com/tvogels/plotpen"
repository = "https://github.com/tvogels/plotpen"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
